--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,9 +4,11 @@
 %table#movies
   %thead
     %tr
-      %th= link_to 'Movie Title', movies_path('sort-by' => 'title')
+      %th{:class => @hilite_title && 'hilite'}= link_to                                 |
+        'Movie Title', movies_path('sort-by' => 'title'), :id => :title_header          |
       %th Rating
-      %th= link_to 'Release Date', movies_path('sort-by' => 'release_date')
+      %th{:class => @hilite_release_date && 'hilite'}= link_to                                  |
+        'Release Date', movies_path('sort-by' => 'release_date'), :id => :release_date_header   |
       %th More Info
   %tbody
     - @movies.each do |movie|
