--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -7,17 +7,17 @@
   - @all_ratings.each do |rating|
     = rating
     = check_box_tag "ratings[#{rating}]", 1, @filters[rating], :id => "ratings_#{rating}"
-  = submit_tag 'Refresh'
+  = submit_tag 'Refresh', :id => 'ratings_submit'
 
 
 %table#movies
   %thead
     %tr
       %th{:class => @hilite_title && 'hilite'}= link_to                                 |
-        'Movie Title', movies_path('sort-by' => 'title'), :id => :title_header          |
+        'Movie Title', movies_path(:ratings => @ratings, 'sort-by' => 'title'), :id => :title_header          |
       %th Rating
       %th{:class => @hilite_release_date && 'hilite'}= link_to                                  |
-        'Release Date', movies_path('sort-by' => 'release_date'), :id => :release_date_header   |
+        'Release Date', movies_path(:ratings => @ratings, 'sort-by' => 'release_date'), :id => :release_date_header   |
       %th More Info
   %tbody
     - @movies.each do |movie|
